--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "description": "General tools",
 	"author": {
 	  "name": "LowTee",
-	  "email": "xcthib@hotmail.com",
+	  "email": "xcthib@hotmail.com"
 	}
 }
